--- a/src/App.css
+++ b/src/App.css
@@ -43,9 +43,9 @@
   margin-bottom: 50px;
 }
 
-.CadastroSuccess{
+.NotificationSuccess{
   background-color: #91d5ff;
 }
-.CadastroFail{
+.NotificationFail{
   background-color: #ffccc7;
 }
