Lista e Confirmação de Contratos

--- a/src/App.css
+++ b/src/App.css
@@ -49,3 +49,10 @@
 .NotificationFail{
   background-color: #ffccc7;
 }
+.ProcessoConfirmado{
+  background-color: #85fcc4
+}
+.buttonModal{
+  width:70%;
+  
+}
