Home Layout Modificado

--- a/src/App.css
+++ b/src/App.css
@@ -61,3 +61,21 @@
 .spanSpace{
   padding-left: 2em;
 }
+.itemCard1{
+  
+  color: #bae637;
+  padding-right: 3em;
+  
+}
+.textoBranco{
+  font-size: 1.5em;
+  font-family: Arial, Helvetica, sans-serif;
+  color: floralwhite;
+
+}
+.resultadoItemCard1{
+  color: #faad14
+}
+.resultadoItemCard6{
+  color: #3f6600
+}
