--- a/src/App.css
+++ b/src/App.css
@@ -61,10 +61,10 @@
 .spanSpace{
   padding-left: 2em;
 }
-.itemCard1{
+.card{
   
-  color: #bae637;
-  padding-right: 3em;
+  padding-right: 2em;
+  
   
 }
 .textoBranco{
@@ -74,8 +74,13 @@
 
 }
 .resultadoItemCard1{
-  color: #faad14
+  color: #389e0d;
+  /* padding-right: 100%; */
+  
 }
 .resultadoItemCard6{
   color: #3f6600
+}
+.percent{
+  padding-bottom: 1.7em;
 }
